#5 myCompany 부분은 일단 끝

--- a/src/components/CompareCompanySection/CompareCompany.css
+++ b/src/components/CompareCompanySection/CompareCompany.css
@@ -1,9 +1,10 @@
-.myCompanySection * {
+.compareCompanySection * {
   background-color: white;
   padding: 10px;
+  margin-top: 50px;
 }
 
-.myCompanySection .selectModal {
+/* .myCompanySection .selectModal {
   width: 496px;
   height: 321px;
   background-color: rgb(160, 228, 255);
@@ -11,4 +12,4 @@
 
 .myCompanySection .modalCloseBtn {
   background-color: black;
-}
+} */
