--- a/src/components/CompareCompanySection/CompareCompany.css
+++ b/src/components/CompareCompanySection/CompareCompany.css
@@ -1,15 +1,16 @@
 .compareCompanySection * {
   background-color: white;
   padding: 10px;
-  margin-top: 50px;
 }
 
-/* .myCompanySection .selectModal {
-  width: 496px;
-  height: 321px;
+.compareCompanySection h2 {
+  background-color: skyblue;
+}
+
+.compareCompanySection .selectModal {
   background-color: rgb(160, 228, 255);
 }
 
-.myCompanySection .modalCloseBtn {
+.compareCompanySection .modalCloseBtn {
   background-color: black;
-} */
+}
