--- a/src/pages/MyCompanyResult/MyCompanyResult.module.css
+++ b/src/pages/MyCompanyResult/MyCompanyResult.module.css
@@ -19,8 +19,14 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+  align-items: center;
 }
 
 .marginTop {
   margin-top: 20px;
+}
+
+.tableContainer {
+  width: 500px;
+  height: auto;
 }
