#5 진행 중 현재 서치바 넣고 자잘하게 수정함

--- a/src/components/MyCompanySection/MyCompany.css
+++ b/src/components/MyCompanySection/MyCompany.css
@@ -12,3 +12,9 @@
 .myCompanySection .modalCloseBtn {
   background-color: black;
 }
+
+.selectModal .modalHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
