--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,7 +10,7 @@
 }
 
 .logo {
-  background-image: url("../assets/main_logo.svg");
+  background-image: url("../../assets/main_logo.svg");
   background-repeat: no-repeat;
   background-position: center;
   width: 111px;
@@ -47,7 +47,7 @@
   .logo {
     width: 64px;
     height: 23px;
-    background-image: url("../assets/mobile_logo.svg");
+    background-image: url("../../assets/mobile_logo.svg");
   }
   .navbarPage {
     padding: 19px 8px;
