--- a/src/pages/MyCompanyResult/MyCompanyResult.module.css
+++ b/src/pages/MyCompanyResult/MyCompanyResult.module.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .titleStyle {
@@ -13,6 +14,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 40px 0 100px 0;
 }
 
 .container {
@@ -20,6 +22,7 @@
   flex-direction: column;
   gap: 30px;
   align-items: center;
+  position: relative;
 }
 
 .marginTop {
@@ -27,6 +30,21 @@
 }
 
 .tableContainer {
-  width: 500px;
+  width: 1024px;
   height: auto;
+}
+.testdiv {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  margin: 40px 0 100px 0;
+  top: 0;
+  right: 0;
+}
+.selectCompanydiv {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
 }
