--- a/src/components/FetchTable/FetchTable.module.css
+++ b/src/components/FetchTable/FetchTable.module.css
@@ -38,6 +38,6 @@
   background-color: var(--gray-300);
   cursor: pointer;
 }
-.table tbody tr:nth-child(2) td {
-  border-top: 2px solid yellow; /* 원하는 색과 두께로 설정 */
+.table tbody tr:nth-child(1) td {
+  border-top: 20px solid var(--black-400); /* 원하는 색과 두께로 설정 */
 }
