inputbox,investmentEdit,form, modal , resultpage css수정

--- a/src/pages/MyCompanyResult/MyCompanyResult.module.css
+++ b/src/pages/MyCompanyResult/MyCompanyResult.module.css
@@ -48,3 +48,9 @@
   align-items: center;
   margin-bottom: 20px;
 }
+
+.modaltitle {
+  font-size: 22px;
+  margin-bottom: 30px;
+  background-color: var(--black-300);
+}
