--- a/src/components/SelectOption/selectOption.module.css
+++ b/src/components/SelectOption/selectOption.module.css
@@ -1,7 +1,60 @@
-.selectBox {
-  width: 168px;
-  height: 48px;
-  border-radius: 10px;
+.selectBoxWrapper {
+  position: relative;
+  width: 200px;
+  font-family: sans-serif;
+}
+
+.selected {
   border: 1px solid #ccc;
   padding: 10px;
+  cursor: pointer;
+  background-color: var(--black-400);
+  border-radius: 10px;
+  text-align: center;
+  margin-bottom: 5px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  color: var(--gray-100);
+}
+
+.optionsList {
+  position: absolute;
+  width: 100%;
+  border-top: none;
+  z-index: 10;
+  max-height: 200px;
+}
+
+.optionItem {
+  padding: 10px;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  height: 40px;
+  text-align: center;
+  color: var(--gray-100);
+}
+.optionItem:first-child {
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+.optionItem:last-child {
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+.optionItem:hover {
+  background-color: var(--black-200);
+}
+
+.divider {
+  border-top: 1px solid #ddd;
+}
+
+.filtericon {
+  height: 24px;
+  width: 24px;
+  margin-top: 2px;
 }
