--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,12 @@ body {
 html {
   font-family: "Pretendard-Regular", sans-serif;
 }
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+}
 * {
   box-sizing: border-box;
   background-color: var(--black-400);
