--- a/src/components/DetailCompany/PaginationBtn.module.css
+++ b/src/components/DetailCompany/PaginationBtn.module.css
@@ -3,9 +3,13 @@
   justify-content: center;
   align-items: center;
   gap: 8px;
+  margin-top: 40px;
 }
 
 .pageButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 48px;
   height: 48px;
   padding: 12px;
@@ -17,6 +21,7 @@
   background-color: var(--black-100);
   border-radius: 10px;
   border: none;
+  cursor: pointer;
 }
 
 .pageButton.active {
