--- a/src/components/customTag/customButton/customButton.module.css
+++ b/src/components/customTag/customButton/customButton.module.css
@@ -1,14 +1,19 @@
-.ButtonStyle {
-  width: 128px;
-  height: 32px;
-  border-radius: 50px;
-  background-color: #eb5230;
-  padding: 4px 12px;
-  gap: 10px;
-}
-
-.center {
+.button {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  height: 40px;
+  border-radius: 50px;
+  background-color: var(--brand-orange);
+  padding: 8px 24px;
+  border: none;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  cursor: pointer;
+}
+.buttonLarge {
+  height: 48px;
+  padding: 13px 48px;
 }
