--- a/src/components/customTag/customButton/customButton.module.css
+++ b/src/components/customTag/customButton/customButton.module.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: 131px;
   height: 40px;
   border-radius: 50px;
   background-color: var(--brand-orange);
@@ -12,8 +13,17 @@
   font-weight: 600;
   line-height: normal;
   cursor: pointer;
+  white-space: nowrap;
 }
 .buttonLarge {
+  min-width: 183px;
   height: 48px;
   padding: 13px 48px;
+}
+.buttonCancel {
+  min-width: 183px;
+  height: 48px;
+  padding: 13px 48px;
+  background-color: var(--black-300);
+  border: 1px solid var(--brand-orange);
 }
