--- a/src/components/InvestmentForm/InvestmentForm.module.css
+++ b/src/components/InvestmentForm/InvestmentForm.module.css
@@ -1,6 +1,6 @@
 .titlefont {
   font-size: 18px;
-  font-weight: 700px;
+  font-weight: 700;
   background-color: var(--black-300);
 }
 
@@ -13,5 +13,14 @@
 }
 
 .backgroundColor {
+  width: 450px;
+  height: 730px;
+  background-color: var(--black-300);
+}
+
+.btnArea {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   background-color: var(--black-300);
 }
