--- a/src/components/DetailCompany/DetailCompanyTitle.module.css
+++ b/src/components/DetailCompany/DetailCompanyTitle.module.css
@@ -13,6 +13,7 @@
   gap: 12px;
   padding: 0;
   border: none;
+  background-color: var(--black-300);
 }
 
 .img {
@@ -37,6 +38,7 @@
   flex-direction: row;
   gap: 8px;
   align-items: center;
+  background-color: var(--black-300);
 }
 
 .title {
@@ -48,6 +50,7 @@
 .titleForm {
   font-size: 18px;
   font-weight: 500;
+  background-color: var(--black-300);
 }
 
 .category {
@@ -60,4 +63,5 @@
 .categoryForm {
   font-size: 16px;
   font-weight: 400;
+  background-color: var(--black-300);
 }
