--- a/src/components/PageSizeSelector/PageSizeSelector.module.css
+++ b/src/components/PageSizeSelector/PageSizeSelector.module.css
@@ -1,5 +1,9 @@
 .pageSizeSelectorBg {
-  background-color: #397f98;
+  background-color: var(--black-400);
+  border: 1px solid #ccc;
   padding: 5px;
   margin: 5px;
+  width: 100px;
+  height: 50px;
+  border-radius: 10px;
 }
