수정하기 삭제하기 완료 후 확인 모달 추가 #4 #11 #12

--- a/src/components/DetailCompany/InvestorTable.module.css
+++ b/src/components/DetailCompany/InvestorTable.module.css
@@ -61,3 +61,22 @@ td {
 tbody tr:last-child td {
   border-bottom: none;
 }
+.modalArea {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--black-300);
+}
+.text {
+  width: 250px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 25px 0;
+  background-color: var(--black-300);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+}
