--- a/src/components/MyCompanySection/MyCompanyReset.module.css
+++ b/src/components/MyCompanySection/MyCompanyReset.module.css
@@ -1,6 +1,7 @@
 .btn {
   height: 40px;
   border-radius: 50px;
+  border: none;
   background: var(--brand-brand_orange, #eb5230);
 
   display: flex;
