--- a/src/components/MyCompanySection/MyCompanySection.module.css
+++ b/src/components/MyCompanySection/MyCompanySection.module.css
@@ -5,10 +5,6 @@
   gap: 16px;
 }
 
-.myCompanySection > * {
-  background-color: transparent;
-}
-
 .header {
   display: flex;
   flex-direction: row;
@@ -28,6 +24,10 @@
   height: 300px;
   border-radius: 4px;
   background: #212121;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .plusBtnBackground {
@@ -63,4 +63,24 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+}
+
+.cancel {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: #d8d8d8;
+  text-align: right;
+  font-family: Pretendard;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-decoration-skip-ink: none;
+  text-decoration-thickness: auto;
+  text-underline-offset: auto;
+  text-underline-position: from-font;
+  background: transparent;
 }
