--- a/src/components/SelectOption/selectOption.module.css
+++ b/src/components/SelectOption/selectOption.module.css
@@ -1,6 +1,6 @@
 .selectBoxWrapper {
   position: relative;
-  width: 200px;
+  width: 234px;
   font-family: sans-serif;
 }
 
@@ -11,7 +11,6 @@
   background-color: var(--black-400);
   border-radius: 10px;
   text-align: center;
-  margin-bottom: 5px;
   position: relative;
   display: flex;
   align-items: center;
@@ -26,6 +25,7 @@
   border-top: none;
   z-index: 10;
   max-height: 200px;
+  margin-top: 5px;
 }
 
 .optionItem {
