--- a/src/components/PageSizeSelector/PageSizeSelector.module.css
+++ b/src/components/PageSizeSelector/PageSizeSelector.module.css
@@ -1,9 +1,68 @@
-.pageSizeSelectorBg {
-  background-color: var(--black-400);
+.selectBoxWrapper {
+  position: relative;
+  width: 136px;
+  font-family: sans-serif;
+}
+
+.selected {
   border: 1px solid #ccc;
-  padding: 5px;
-  margin: 5px;
-  width: 100px;
-  height: 50px;
+  padding: 10px;
+  cursor: pointer;
+  background-color: var(--black-400);
   border-radius: 10px;
+  text-align: center;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  color: var(--gray-100);
+}
+
+.filtericon {
+  height: 24px;
+  width: 24px;
+  margin-top: 2px;
+}
+
+.optionsList {
+  position: absolute;
+  width: 100%;
+  border-top: none;
+  z-index: 10;
+  max-height: 200px;
+  margin-top: 5px;
+  background-color: var(--black-400); /* 드롭다운 배경 */
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  overflow-y: auto;
+}
+
+.optionItem {
+  padding: 10px;
+  cursor: pointer;
+  height: 40px;
+  text-align: center;
+  color: var(--gray-100);
+  background-color: var(--black-400);
+  border-top: 1px solid #ccc;
+}
+
+.optionItem:hover {
+  background-color: var(--black-200);
+}
+
+.optionItem:first-child {
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-top: none;
+}
+
+.optionItem:last-child {
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+.divider {
+  border-top: 1px solid #ddd;
 }
