--- a/src/pages/LandingPage/LandingPage.module.css
+++ b/src/pages/LandingPage/LandingPage.module.css
@@ -9,6 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 5px;
 }
 
 .tableTitle {
@@ -26,7 +27,6 @@
   width: 1200px;
   height: 640px;
 }
-
 
 .startupPage {
   display: flex;
