--- a/src/components/DetailCompany/PaginationBtn.module.css
+++ b/src/components/DetailCompany/PaginationBtn.module.css
@@ -5,11 +5,15 @@
   gap: 8px;
   margin-top: 40px;
 }
-
+.modalArea {
+  background-color: var(--black-300);
+  margin-top: 0;
+}
 .pageButton {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   width: 48px;
   height: 48px;
   padding: 12px;
@@ -22,6 +26,12 @@
   border-radius: 10px;
   border: none;
   cursor: pointer;
+}
+.smallButton {
+  width: 40px;
+  height: 40px;
+  padding: 5px 10px;
+  font-size: 16px;
 }
 
 .pageButton.active {
