--- a/src/components/InvestmentForm/InvestmentForm.module.css
+++ b/src/components/InvestmentForm/InvestmentForm.module.css
@@ -25,17 +25,16 @@
   background-color: var(--black-300);
 }
 
-.nameBox {
+.nicknameDisplay {
+  width: 408px;
   background-color: var(--black-300);
-  border-radius: 5px;
-  height: 64px;
-  width: 440px;
+  margin: 30px 10px 15px;
 }
-
-.nameBox > p {
-  font-size: 30px;
-  font-weight: 700;
-  color: #ffffff;
+.name {
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
   background-color: var(--black-300);
 }
 
@@ -48,13 +47,10 @@
 
 .info {
   background-color: var(--black-300);
-  font-weight: 800;
   margin-bottom: 10px;
-}
-
-.nicknameDisplay {
-  background-color: var(--black-300);
-  margin-top: 20px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
 }
 
 .emtybox {
