--- a/src/components/CompanyCard.module.css
+++ b/src/components/CompanyCard.module.css
@@ -4,6 +4,11 @@
   width: 126px;
   height: 187px;
   flex-shrink: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .com {
@@ -15,7 +20,7 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 
   position: relative;
@@ -38,6 +43,7 @@
   background-color: transparent;
 
   display: flex;
+  padding-top: 32px;
   flex-direction: column;
   align-items: center;
   gap: 10px;
@@ -45,6 +51,8 @@
 
 .content > div {
   background-color: transparent;
+  display: flex;
+  flex-direction: column;
 }
 
 .img {
@@ -55,7 +63,6 @@
 }
 
 .name {
-  display: block;
   background-color: transparent;
 
   color: #fff;
@@ -64,12 +71,22 @@
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
-  line-height: normal;
   margin-bottom: 4px;
+  line-height: 120%;
+
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  line-clamp: 2;
+  box-orient: vertical;
+  overflow: hidden;
+  word-break: break-all;
+  text-overflow: ellipsis;
+
+  flex-shrink: 1;
 }
 
 .category {
-  display: block;
   background-color: transparent;
 
   color: #747474;
@@ -78,5 +95,6 @@
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
-  line-height: normal;
+
+  flex-shrink: 1;
 }
