--- a/src/components/MyCompanySection/MyCompanySection.module.css
+++ b/src/components/MyCompanySection/MyCompanySection.module.css
@@ -20,7 +20,7 @@
   line-height: normal;
 }
 .myCompanyBox {
-  width: 1200px;
+  width: 100%;
   height: 300px;
   border-radius: 4px;
   background: #212121;
