--- a/src/pages/CompanyDetailPage/CompanyDetailPage.module.css
+++ b/src/pages/CompanyDetailPage/CompanyDetailPage.module.css
@@ -29,3 +29,28 @@
   font-weight: 700;
   line-height: normal;
 }
+
+.modalTitle {
+  font-size: 22px;
+  font-weight: 700;
+  margin-bottom: 30px;
+  background-color: var(--black-300);
+}
+
+.modalArea {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  margin-top: 30px;
+  background-color: var(--black-300);
+}
+.modalText {
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-align: center;
+  background-color: var(--black-300);
+}
