--- a/src/pages/SelectedOverviewPage/SelectedOverviewPage.module.css
+++ b/src/pages/SelectedOverviewPage/SelectedOverviewPage.module.css
@@ -29,3 +29,15 @@
   flex-direction: column;
   align-items: center; /* 가운데 정렬하려면 */
 }
+
+@media (min-width: 744px) and (max-width: 1199px) {
+  .tableNav {
+    width: min(824px, 100%);
+  }
+  .tableSize {
+    width: min(824px, 100%);
+  }
+  .tablebox {
+    width: 824px;
+  }
+}
