--- a/src/components/LoadingSpinner/LoadingSpinner.css
+++ b/src/components/LoadingSpinner/LoadingSpinner.css
@@ -3,13 +3,14 @@
   justify-content: center;
   align-items: center;
   padding: 40px;
+  background-color: transparent;
 }
 
 .spinner {
   width: 40px;
   height: 40px;
   border: 5px solid rgba(0, 0, 0, 0.1);
-  border-top: 5px solid #4caf50; /* 회전 색상 */
+  border-top: 5px solid #eb5230; /* 회전 색상 */
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
