--- a/src/components/customTag/customButton/customButton.module.css
+++ b/src/components/customTag/customButton/customButton.module.css
@@ -15,6 +15,11 @@
   cursor: pointer;
   white-space: nowrap;
 }
+.button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+  opacity: 0.7;
+}
 .buttonLarge {
   min-width: 183px;
   height: 48px;
