--- a/src/components/DetailCompany/DetailCompanyTitle.module.css
+++ b/src/components/DetailCompany/DetailCompanyTitle.module.css
@@ -65,3 +65,23 @@
   font-weight: 400;
   background-color: var(--black-300);
 }
+
+@media (min-width: 375px) and (max-width: 743px) {
+  .area {
+    height: 64px;
+    padding-bottom: 16px;
+  }
+
+  .img {
+    width: 48px;
+    height: 48px;
+  }
+
+  .title {
+    font-size: 20px;
+  }
+
+  .category {
+    font-size: 16px;
+  }
+}
