--- a/src/components/ToastMessage/Toast.module.css
+++ b/src/components/ToastMessage/Toast.module.css
@@ -5,8 +5,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 150px;
+  min-width: 150px;
   height: 50px;
+  padding: 15px;
   background-color: var(--brand-orange);
   border: none;
   border-radius: 10px;
