--- a/src/components/FetchTable/FetchTable.module.css
+++ b/src/components/FetchTable/FetchTable.module.css
@@ -58,6 +58,7 @@
   border-radius: 50px;
   background-color: var(--black-100);
   background-image: url("https://picsum.photos/250/250");
+  object-fit: cover;
 }
 
 .namebox {
