--- a/src/components/DetailCompany/DetailCompanyTitle.module.css
+++ b/src/components/DetailCompany/DetailCompanyTitle.module.css
@@ -20,13 +20,12 @@
   width: 82px;
   height: 82px;
   border-radius: 50px;
-  background-image: url("https://picsum.photos/250/250");
-  background-repeat: no-repeat;
-  background-position: center;
+  object-fit: cover;
 }
 .imgForm {
   width: 40px;
   height: 40px;
+  background-color: var(--black-300);
 }
 
 .box {
