--- a/src/components/ToastMessage/Toast.module.css
+++ b/src/components/ToastMessage/Toast.module.css
@@ -5,11 +5,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 150px;
-  height: 50px;
+  min-width: 250px;
+  height: 100px;
   padding: 15px;
-  background-color: var(--brand-orange);
-  border: none;
+  background-color: var(--black-200);
+  border: 1px solid var(--brand-orange);
   border-radius: 10px;
   font-size: 15px;
   font-style: normal;
