--- a/src/pages/MyCompanyResult/MyCompanyResult.module.css
+++ b/src/pages/MyCompanyResult/MyCompanyResult.module.css
@@ -43,6 +43,8 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
+  width: 1024px;
+  margin-top: 30px;
 }
 
 .modaltitle {
