--- a/src/components/InvestmentForm/InputBox.module.css
+++ b/src/components/InvestmentForm/InputBox.module.css
@@ -16,6 +16,10 @@
   background-color: var(--black-300);
 }
 
+.errorInput {
+  border: 1px solid var(--red-error);
+}
+
 .def {
   border-radius: 5px;
   height: 108px;
@@ -40,6 +44,7 @@ input[type="number"] {
   background-color: var(--black-300);
 }
 
-.backgroundColor {
+.error {
+  color: var(--red-error);
   background-color: var(--black-300);
 }
