유저 정보창 반응형 CSS 적용 #3

--- a/src/components/Navbar/AuthStatus.module.css
+++ b/src/components/Navbar/AuthStatus.module.css
@@ -92,3 +92,9 @@
 .btn:hover {
   background-color: var(--brand-orange);
 }
+
+@media (min-width: 744px) and (max-width: 1199px) {
+  .infoBox {
+    right: 0%;
+  }
+}
