--- a/src/components/ToastMessage/Toast.module.css
+++ b/src/components/ToastMessage/Toast.module.css
@@ -8,7 +8,7 @@
   min-width: 250px;
   height: 100px;
   padding: 15px;
-  background-color: var(--black-200);
+  background-color: var(--black-200) !important;
   border: 1px solid var(--brand-orange);
   border-radius: 10px;
   font-size: 15px;
@@ -19,7 +19,7 @@
   opacity: 1;
   transform: translate(-50%, -50%);
   transition: opacity 0.4s, transform 0.4s;
-  z-index: 3000;
+  z-index: 9999;
   pointer-events: none;
 }
 
