--- a/src/components/FetchTable/FetchTable.module.css
+++ b/src/components/FetchTable/FetchTable.module.css
@@ -77,7 +77,7 @@
   background-color: var(--black-100);
 }
 
-tbody tr:hover {
+.tbody tr:hover {
   transform: translateY(-5px);
   transition: transform 0.3s ease;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
