로그인 안되었을때 투자 시 로그인 필요 모달 추가 및 코멘트 40자 + 입력한 글자수 표시 #4 #6 #9 #10 #11

--- a/src/components/DetailCompany/InvestorTable.module.css
+++ b/src/components/DetailCompany/InvestorTable.module.css
@@ -81,6 +81,32 @@ tbody tr:last-child td {
   font-weight: 600;
 }
 
+.myInv > td {
+  color: var(--brand-orange);
+}
+
+.myInv:hover > td {
+  background-color: var(--black-200);
+}
+
+.loginModal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  margin-top: 30px;
+  background-color: var(--black-300);
+}
+.loginText {
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-align: center;
+  background-color: var(--black-300);
+}
+
 @media (min-width: 744px) and (max-width: 1199px) {
   .comment,
   .commentBox {
