--- a/src/components/InvestmentForm/InvestmentForm.module.css
+++ b/src/components/InvestmentForm/InvestmentForm.module.css
@@ -59,3 +59,11 @@
   height: 3px;
   background-color: var(--black-100);
 }
+
+.commentCount {
+  padding-left: 10px;
+  color: var(--gray-200);
+  font-size: 12px;
+  font-weight: 500;
+  background-color: var(--black-300);
+}
