--- a/src/pages/MyCompanyResult/MyCompanyResult.module.css
+++ b/src/pages/MyCompanyResult/MyCompanyResult.module.css
@@ -72,3 +72,21 @@
   text-align: center;
   background-color: var(--black-300);
 }
+
+.loginModal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  margin-top: 30px;
+  background-color: var(--black-300);
+}
+.loginText {
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-align: center;
+  background-color: var(--black-300);
+}
