--- a/src/components/FetchTable/FetchTable.module.css
+++ b/src/components/FetchTable/FetchTable.module.css
@@ -77,7 +77,7 @@
   background-color: var(--black-100);
 }
 
-.tbody tr:hover {
+table tbody tr:hover {
   transform: translateY(-5px);
   transition: transform 0.3s ease;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -105,5 +105,25 @@
   .namebox {
     display: flex;
     justify-content: center;
+  }
+  .landingTable td:nth-child(3),
+  .landingTable th:nth-child(3),
+  .landingTable td:nth-child(4),
+  .landingTable th:nth-child(4),
+  .landingTable td:nth-child(5),
+  .landingTable th:nth-child(5),
+  .landingTable td:nth-child(6),
+  .landingTable th:nth-child(6),
+  .landingTable td:nth-child(7),
+  .landingTable th:nth-child(7) {
+    display: none;
+  }
+}
+@media (min-width: 744px) and (max-width: 1199px) {
+  .landingTable td:nth-child(4),
+  .landingTable th:nth-child(4),
+  .landingTable td:nth-child(7),
+  .landingTable th:nth-child(7) {
+    display: none;
   }
 }
