--- a/src/pages/SelectedOverviewPage/SelectedOverviewPage.module.css
+++ b/src/pages/SelectedOverviewPage/SelectedOverviewPage.module.css
@@ -32,13 +32,18 @@
 
 @media (min-width: 744px) and (max-width: 1199px) {
   .tableNav {
-    width: 854px;
+    width: 826px;
   }
   .tableSize {
     width: min(824px, 100%);
   }
   .tablebox {
     width: 824px;
+  }
+  .customInput {
+    font-size: 15px;
+    padding: 8px 50px;
+    width: 220px;
   }
 }
 
@@ -59,5 +64,10 @@
   .tablebox {
     width: 100%;
     padding: 0 16px;
+  }
+  .customInput {
+    font-size: 15px;
+    padding: 8px 50px;
+    width: 220px;
   }
 }
