기업상세 페이지 코드 수정 #4

--- a/src/pages/CompanyDetailPage/CompanyDetailPage.module.css
+++ b/src/pages/CompanyDetailPage/CompanyDetailPage.module.css
@@ -73,6 +73,14 @@
   background-color: var(--black-300);
 }
 
+.catArea {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 200px auto;
+}
+
 @media (min-width: 744px) and (max-width: 1199px) {
   .area {
     max-width: 744px;
