고양이 게임 최종 적용

--- a/src/pages/InvestmentOverviewPage/InvestmentOverviewPage.module.css
+++ b/src/pages/InvestmentOverviewPage/InvestmentOverviewPage.module.css
@@ -42,6 +42,7 @@
   margin-top: 30px;
   font-size: 30px;
   animation: colorChange 0.66s infinite linear;
+  margin-bottom: 50px;
 }
 @keyframes colorChange {
   0% {
