--- a/src/components/CompareCompanySection/CompareCompanySection.module.css
+++ b/src/components/CompareCompanySection/CompareCompanySection.module.css
@@ -1,12 +1,12 @@
 .section {
-  width: 1200px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
 
 .header {
-  width: 1200px;
+  width: 100%;
   height: 40px;
   display: flex;
   flex-direction: row;
@@ -82,4 +82,10 @@
   display: flex;
   flex-direction: row;
   gap: 16px;
+}
+
+@media (min-width: 1px) and (max-width: 1199px) {
+  .background {
+    height: 208px;
+  }
 }
