랜딩,비교,투자,결과 css 재조정

--- a/src/pages/InvestmentOverviewPage/InvestmentOverviewPage.module.css
+++ b/src/pages/InvestmentOverviewPage/InvestmentOverviewPage.module.css
@@ -74,6 +74,7 @@
   }
   .tablebox {
     width: 824px;
+    scale: 0.9;
   }
   .customInput {
     font-size: 15px;
@@ -99,6 +100,7 @@
   .tablebox {
     width: 100%;
     padding: 0 16px;
+    scale: 0.9;
   }
   .customInput {
     font-size: 15px;
