--- a/src/pages/SelectedOverviewPage/SelectedOverviewPage.module.css
+++ b/src/pages/SelectedOverviewPage/SelectedOverviewPage.module.css
@@ -39,6 +39,7 @@
   }
   .tablebox {
     width: 824px;
+    scale: 0.9;
   }
   .customInput {
     font-size: 15px;
@@ -64,6 +65,7 @@
   .tablebox {
     width: 100%;
     padding: 0 16px;
+    scale: 0.9;
   }
   .customInput {
     font-size: 15px;
