--- a/src/components/SelectOption/selectOption.module.css
+++ b/src/components/SelectOption/selectOption.module.css
@@ -58,3 +58,31 @@
   width: 24px;
   margin-top: 2px;
 }
+
+@media (min-width: 744px) and (max-width: 1199px) {
+  .selectBoxWrapper {
+    width: 50px;
+  }
+  .selected {
+    font-size: 0px;
+    color: transparent;
+  }
+  .optionsList {
+    width: 223px;
+    right: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .selectBoxWrapper {
+    width: 50px;
+  }
+  .selected {
+    font-size: 0px;
+    color: transparent;
+  }
+  .optionsList {
+    width: 223px;
+    right: 0;
+  }
+}
