랜딩 비교 투자 페이지 모바일사이즈일때 css 재조정

--- a/src/components/PageSizeSelector/PageSizeSelector.module.css
+++ b/src/components/PageSizeSelector/PageSizeSelector.module.css
@@ -66,3 +66,31 @@
 .divider {
   border-top: 1px solid #ddd;
 }
+
+@media (min-width: 744px) and (max-width: 1199px) {
+  .selectBoxWrapper {
+    width: 50px;
+  }
+  .selected {
+    font-size: 0px;
+    color: transparent;
+  }
+  .optionsList {
+    width: 133px;
+    right: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .selectBoxWrapper {
+    width: 50px;
+  }
+  .selected {
+    font-size: 0px;
+    color: transparent;
+  }
+  .optionsList {
+    width: 133px;
+    right: 0;
+  }
+}
