--- a/src/pages/LandingPage/LandingPage.module.css
+++ b/src/pages/LandingPage/LandingPage.module.css
@@ -62,6 +62,9 @@
   .tableNav {
     width: 100%;
     padding: 0 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
 
   .tableSize {
