--- a/src/pages/InvestmentOverviewPage/InvestmentOverviewPage.module.css
+++ b/src/pages/InvestmentOverviewPage/InvestmentOverviewPage.module.css
@@ -90,6 +90,9 @@
   .tableNav {
     width: 100%;
     padding: 0 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
 
   .tableSize {
