--- a/src/pages/SelectedOverviewPage/SelectedOverviewPage.module.css
+++ b/src/pages/SelectedOverviewPage/SelectedOverviewPage.module.css
@@ -53,6 +53,9 @@
     min-width: 100px;
   }
   .tableNav {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     width: 100%;
     padding: 0 16px;
   }
