--- a/src/pages/InvestmentOverviewPage/InvestmentOverviewPage.module.css
+++ b/src/pages/InvestmentOverviewPage/InvestmentOverviewPage.module.css
@@ -11,7 +11,12 @@
   gap: 5px;
 }
 .tableTitle {
-  font-size: 24px;
+  font-size: 22px;
+  font-weight: 700;
+}
+.tableName {
+  color: var(--brand-orange);
+  font-size: 26px;
   font-weight: 700;
 }
 
